--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <surefire.version>2.19.1</surefire.version>
 
-        <test.file>default</test.file>
+        <test.file></test.file>
         <config.file>default</config.file>
     </properties>
 
