--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
+                    <parallel>methods</parallel>
+                    <threadCount>20</threadCount>
                     <suiteXmlFiles>
                         <suiteXmlFile>config/single.testng.xml</suiteXmlFile>
                         <suiteXmlFile>config/local.testng.xml</suiteXmlFile>
