--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,15 @@
-- name: BrowserStack Action
-  uses: 'browserstack/github-actions@master'
-  with:
-    username:  ${{ secrets.BROWSERSTACK_USERNAME }}
-    access-key: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
-    build-name: BUILD_INFO
-    project-name: REPO_NAME
+name: 'BrowserStack Test'
+on: [push, pull_request]
+
+jobs:
+  ubuntu-job:
+    name: 'BrowserStack Test on Ubuntu'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'BrowserStack Env Setup'
+        uses: 'browserstack/github-actions/setup-env@master'
+        with:
+          username:  ${{ secrets.BROWSERSTACK_USERNAME }}
+          access-key: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
+          build-name: BUILD_INFO
+          project-name: REPO_NAME
