--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: 'BrowserStack Test'
 on: [push, pull_request]
+schedule:
+    - cron: '* * * * 1'  # every day at midnight
 
 jobs:
   ubuntu-job:
